Archive2/e5/86e38febcaf5c6/output
main.cpp:2:1: error: 'MP3Filter' has not been declared
 MP3Filter::checkBitrate(int nBitrate)
 ^
main.cpp: In function 'int checkBitrate(int)':
main.cpp:4:9: error: 'nBitRate' was not declared in this scope
     if (nBitRate <= 32) return 32;
         ^
main.cpp:5:9: error: 'nBitRate' was not declared in this scope
     if (nBitRate > 256) return 320;
         ^
main.cpp:26:25: error: 'nBitRate' was not declared in this scope
     return realbitrate[(nBitRate-1)/8];
                         ^
main.cpp:42:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
